# gptTraiding

./: BinanceAPI.cpp  BinanceAPI.h  CMakeLists.txt  MovingAverageStrategy.cpp  MovingAverageStrategy.h  StrategyTester.cpp  StrategyTester.h  Trade.h  TradingStrategy.cpp  TradingStrategy.h  Visualizer.cpp  Visualizer.h  main.cpp
